; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/arm/extr_malidp_hw.c_malidp550_in_config_mode.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/arm/extr_malidp_hw.c_malidp550_in_config_mode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.malidp_hw_device = type { %struct.TYPE_4__* }
%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i64 }

@MALIDP_REG_STATUS = common dso_local global i64 0, align 8
@MALIDP550_DC_CONFIG_REQ = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.malidp_hw_device*)* @malidp550_in_config_mode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @malidp550_in_config_mode(%struct.malidp_hw_device* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.malidp_hw_device*, align 8
  %4 = alloca i32, align 4
  store %struct.malidp_hw_device* %0, %struct.malidp_hw_device** %3, align 8
  %5 = load %struct.malidp_hw_device*, %struct.malidp_hw_device** %3, align 8
  %6 = load %struct.malidp_hw_device*, %struct.malidp_hw_device** %3, align 8
  %7 = getelementptr inbounds %struct.malidp_hw_device, %struct.malidp_hw_device* %6, i32 0, i32 0
  %8 = load %struct.TYPE_4__*, %struct.TYPE_4__** %7, align 8
  %9 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %8, i32 0, i32 0
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = load i64, i64* @MALIDP_REG_STATUS, align 8
  %13 = add nsw i64 %11, %12
  %14 = call i32 @malidp_hw_read(%struct.malidp_hw_device* %5, i64 %13)
  store i32 %14, i32* %4, align 4
  %15 = load i32, i32* %4, align 4
  %16 = load i32, i32* @MALIDP550_DC_CONFIG_REQ, align 4
  %17 = and i32 %15, %16
  %18 = load i32, i32* @MALIDP550_DC_CONFIG_REQ, align 4
  %19 = icmp eq i32 %17, %18
  br i1 %19, label %20, label %21

20:                                               ; preds = %1
  store i32 1, i32* %2, align 4
  br label %22

21:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %22

22:                                               ; preds = %21, %20
  %23 = load i32, i32* %2, align 4
  ret i32 %23
}

declare dso_local i32 @malidp_hw_read(%struct.malidp_hw_device*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
